deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-frontend
spec:
  replicas: 1
  template:
    spec:
      containers:
      - image: sensrnetnl/registry-frontend:0.2.1
        name: registry-frontend
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /nginx-health
            port: http
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /nginx-health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        args:
          - -health-status=true
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
