deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry-frontend
  name: registry-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: registry-frontend
